Refatoração geral do contexto de FileStorage
Adotado padrão Request e Response para nomenclatura dos DTO's para melhor entendimento

Mudanças na estrutura do contexto para se adequar melhor ao MVC

Padronizado respostas dos controllers

Ajustes realizados em outros contextos para se adequar as mudanças realizadas no contexto FileStorage