@@ -3,7 +3,8 @@ package br.com.danielschiavo.produto.service.produto.validacoes;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import br.com.danielschiavo.filestorage.ArquivoInfoDTO;
+import br.com.danielschiavo.filestorage.dto.response.FileInfoResponse;
+import br.com.danielschiavo.filestorage.model.File;
 import br.com.danielschiavo.filestorage.service.FileStorageProdutoService;
 import br.com.danielschiavo.produto.dto.request.CadastrarProdutoRequest;
 import br.com.danielschiavo.produto.dto.ArquivoProdutoDTO;
@@ -19,13 +20,12 @@ public class ValidadorArquivosProduto implements ValidadorCadastrarNovoProduto {
 	
 	@Override
 	public void validar(CadastrarProdutoRequest request) {
-		List<String> nomes = request.arquivos().stream().map(ArquivoProdutoDTO::nome).collect(Collectors.toList());
+		List<String> nomes = request.arquivos().stream().map(ArquivoProdutoDTO::nome).toList();
 
-		List<ArquivoInfoDTO> arquivoInfoDTOS = fileStorageProdutoService.pegarImagens(nomes);
-		arquivoInfoDTOS.forEach(arquivo -> {
-			if (arquivo.erro() != null) {
-				throw new ValidacaoException("Não foi possivel cadastrar o produto porque a imagem " + arquivo.nomeArquivo() + " não existe");
-			}
+		nomes.forEach(nome -> {
+			boolean existe = fileStorageProdutoService.verificarSeImagemExiste(nome);
+			if (!existe)
+				throw new ValidacaoException("Não foi possivel cadastrar o produto porque a imagem " + nome + " não existe");
 		});
 	}
 
